add menu burger

--- a/styles/style.css
+++ b/styles/style.css
@@ -15,14 +15,15 @@ body {
     flex: 1 1 auto;
 }
 
+
 .title {
     color: #000;
     font-size: 40px;
     font-weight: 600;
 }
 
-@media(max-width:767.98px){
-    .title{
+@media(max-width:767.98px) {
+    .title {
         font-size: 30px;
     }
 }
@@ -81,6 +82,8 @@ body {
 .header__logo {
     font-size: 23px;
     font-weight: 800;
+    position: relative;
+    z-index: 5;
 }
 
 .header__menu {}
@@ -91,7 +94,6 @@ body {
     display: flex;
     column-gap: 46px;
     row-gap: 15px;
-    flex-wrap: wrap;
 }
 
 .menu__item {}
@@ -101,6 +103,8 @@ body {
     font-size: 13px;
     font-weight: 700;
     position: relative;
+    line-height: 1.6;
+    display: block;
 }
 
 .menu__link::after {
@@ -119,20 +123,116 @@ body {
 
 }
 
+
+
+
+@media(max-width:991.98px) {
+    .header__container {
+        min-height: 90px;
+    }
+}
+
+
+.icon-menu {
+    display: none;
+}
+
 @media(max-width:767.98px) {
     .header__container {
-        flex-direction: column;
-        min-height: 0;
-        padding: 10px 15px;
+        min-height: 70px;
+    }
+
+    .icon-menu {
+        display: block;
+        flex: 0 0 30px;
+        height: 18px;
+        position: relative;
+        z-index: 15;
+    }
+
+    .icon-menu span,
+    .icon-menu::before,
+    .icon-menu::after {
+        position: absolute;
+        content: '';
+        right: 0;
+        width: 100%;
+        background-color: #000;
+        height: 2px;
+        transition: all 0.3s ease 0s;
+    }
+
+
+    .icon-menu::before {
+        top: 0;
+    }
+
+    .icon-menu::after {
+        bottom: 0;
+    }
+
+    .icon-menu span {
+        top: calc(50% -1px);
+    }
+
+
+    .menu-open .icon-menu span {
+        width: 0;
+    }
+
+    .menu-open .icon-menu::before {
+        top: calc(50% - 1px);
+        transform: rotate(-45deg);
+    }
+
+    .menu-open .icon-menu::after {
+        bottom: calc(50% - 1px);
+        transform: rotate(45deg);
+    }
+
+
+
+
+    .menu__body {
+        position: fixed;
+        z-index: 2;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: -100%;
+        background-color: #BDCCFF;
+        padding: 100px 15px 30px 15px;
+        overflow: auto;
+        transition: left 0.5s ease 0s;
+    }
+
+    .menu__body::before {
+        content: '';
+        width: 100%;
+        height: 70px;
+        top: 0;
+        left: -100%;
+        background-color: #BDCCFF;
+        overflow: auto;
+        transition: left 0.5s ease 0s;
     }
 
     .menu__list {
         justify-content: center;
+        flex-direction: column;
+        text-align: center;
+        row-gap: 10px;
     }
 
     .menu__link {
-        font-size: 18px;
+        font-size: 32px;
     }
+}
+
+/* Це прописати в css */
+.menu-open .menu__body,
+.menu-open .menu__body::before {
+    left: 0;
 }
 
 /* ******************************************************* */
@@ -506,18 +606,25 @@ body {
         padding-bottom: 30px;
     }
 
-    .how__title{
+    .how__title {
         margin-bottom: 40px;
     }
-    .item-how__icon{
+
+    .item-how__icon {
         margin-bottom: 30px;
     }
 
     .how__list {
         grid-template-columns: 1fr;
     }
+
     .item-how--1::after,
     .item-how--2::after {
         display: none;
     }
+}
+
+.footer__container {
+    position: relative;
+    z-index: 51;
 }
