--- a/styles/style.css
+++ b/styles/style.css
@@ -819,3 +819,174 @@ body {
         flex: 1 1 100%;
     }
 }
+
+
+/* ============================  FEATURED ================================== */
+.featured {
+    padding-top: 120px;
+    padding-bottom: 100px;
+}
+
+.featured__container {}
+
+.featured__title {
+    margin-bottom: 95px;
+}
+
+
+.featured__body {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    background: #F1FFFF;
+    padding: 40px 40px 80px 40px;
+    gap: 77px;
+}
+
+.featured__media {}
+
+.media-featured {}
+
+.media-featured__img {
+    display: grid;
+    justify-items: center;
+}
+
+.media-featured__img img {
+    max-width: 100%;
+}
+
+.media-featured__img-big img {}
+
+.media-featured__img-small {
+    margin-top: -113px;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+
+.content-featured {
+    display: flex;
+    flex-direction: column;
+}
+
+.content-featured__body {
+    flex: 1 1 auto;
+}
+
+@media(min-width:991.98px) {
+    .content-featured__link {
+        max-width: 412px;
+    }
+
+    .featured__content {
+        padding-top: 40px;
+    }
+
+    .content-featured__text {
+        max-width: 344px;
+    }
+}
+
+.content-featured__title {
+    color: #000;
+    font-size: 31px;
+    font-weight: 600;
+    line-height: 1.3;
+    margin-bottom: 28px;
+}
+
+.content-featured__text {
+    line-height: 1.5;
+    margin-bottom: 42px;
+    /* 24/16 */
+}
+
+.content-featured__list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    margin-bottom: 30px;
+}
+
+.content-featured__item {}
+
+.item-content-featured {}
+
+.item-content-featured__label {
+    color: #000;
+    font-size: 17px;
+    font-weight: 700;
+    margin-bottom: 12px;
+}
+
+.item-content-featured__text {
+    color: #545A58;
+    font-size: 17px;
+}
+
+.content-featured__link {
+    border-radius: 5px;
+    background: #F85A47;
+    box-shadow: 0px 100px 80px 0px rgba(248, 90, 71, 0.07), 0px 64.815px 46.852px 0px rgba(248, 90, 71, 0.05), 0px 38.519px 25.481px 0px rgba(248, 90, 71, 0.04), 0px 20px 13px 0px rgba(248, 90, 71, 0.04), 0px 8.148px 6.519px 0px rgba(248, 90, 71, 0.03), 0px 1.852px 3.148px 0px rgba(248, 90, 71, 0.02);
+    color: #FFF;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 16px 38px;
+    display: inline-block;
+}
+
+@media(max-width:991.98px) {
+    .featured {
+        padding-top: 70px;
+        padding-bottom: 70px;
+    }
+
+    .featured__body {
+        display: flex;
+        flex-direction: column-reverse;
+        gap: 50px;
+        padding: 30px 30px 50px 30px;
+    }
+
+    .featured__title {
+        margin-bottom: 50px;
+    }
+}
+
+@media(max-width:767.98px) {
+    .featured {
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+
+    .featured__body {
+        gap: 30px;
+        padding: 30px;
+    }
+
+    .featured__title {
+        margin-bottom: 30px;
+    }
+
+    .content-featured__title {
+        font-size: 24px;
+    }
+}
+
+@media(max-width:479.98px) {
+    .featured__body {
+        margin-left: -30px;
+        margin-right: -30px;
+    }
+
+    .content-featured__list {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .content-featured__link {
+        font-size: 16px;
+        line-height: 1.3;
+        padding: 14px 28px;
+    }
+}
