--- a/styles/style.css
+++ b/styles/style.css
@@ -323,8 +323,12 @@ body {
     padding: 32px 40px;
     flex: 0 0 188px;
     cursor: pointer;
+    transition: background-color 0.3s ease 0s;
 }
 
+.form-content__button:hover {
+    background-color: #9b3f38;
+}
 
 .body-hero__slder {
     flex: 0 1 50%;
@@ -934,6 +938,11 @@ body {
     font-weight: 500;
     padding: 16px 38px;
     display: inline-block;
+    transition: background-color 0.3s ease 0s;
+}
+
+.content-featured__link:hover {
+    background-color: #9b3f38;
 }
 
 @media(max-width:991.98px) {
