--- a/styles/style.css
+++ b/styles/style.css
@@ -80,10 +80,13 @@ body {
 }
 
 .header__logo {
-    font-size: 23px;
-    font-weight: 800;
     position: relative;
     z-index: 5;
+}
+
+.logo {
+    font-size: 23px;
+    font-weight: 800;
 }
 
 .menu__list {
@@ -1243,11 +1246,16 @@ body {
         padding-top: 70px;
         padding-bottom: 70px;
     }
-    .subscribe__title{
+
+    .subscribe__title {
         font-size: 30px;
     }
-    .subscribe__subtitle{
+
+    .subscribe__subtitle {
         font-size: 20px;
+    }
+    .form-subscribe__button{
+        padding: 15px 30px;
     }
 }
 
@@ -1256,11 +1264,98 @@ body {
         padding-top: 30px;
         padding-bottom: 30px;
     }
-    .subscribe__form{
+
+    .subscribe__form {
         flex-direction: column;
         padding: 20px;
     }
-    .form-subscribe__label{
+
+    .form-subscribe__label {
         margin-bottom: 8px;
+    }
+}
+
+/* ================== FOOTER ======================= */
+.footer {
+    background-color: #FBFCFC;
+}
+
+.footer__container {
+    display: grid;
+    grid-template-columns: auto, 1fr;
+    row-gap: 77px;
+    column-gap: 20px;
+    padding-top: 60px;
+    padding-bottom: 36px;
+}
+
+.footer__logo {}
+
+.logo {}
+
+.footer__menu {
+    flex: 1 1 auto;
+}
+
+.menu-footer {}
+
+.menu-footer__list {
+    display: flex;
+    justify-content: flex-end;
+    column-gap: 45px;
+    row-gap: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.menu-footer__item {}
+
+.menu-footer__link {
+    color: #31353B;
+    font-size: 13px;
+    font-weight: 700;
+    line-height: 1.3;
+}
+
+.footer__copy {
+    color: #31353B;
+    font-size: 12px;
+    font-weight: 700;
+    line-height: 1.3;
+    text-align: center;
+}
+
+@media(min-width:991.98px) {
+    .footer__container {
+        padding-left: 130px;
+        padding-right: 130px;
+        border-top: 1px solid #DEDFE1;
+    }
+    .footer__copy {
+        grid-column: span 2;
+    }
+}
+
+@media(max-width:991.98px) {
+    .footer__container {
+        grid-template-columns: 1fr;
+        /* column-gap: 77px; */
+        row-gap: 30px;
+        column-gap: 20px;
+        justify-items: center;
+    }
+
+    .menu-footer__list {
+        column-gap: 30px;
+    }
+    .menu-footer__link{
+        font-size: 16px;
+    }
+}
+
+@media(max-width:767.98px){
+    .footer__container{
+        padding-top: 30px;
+        padding-bottom: 30px;
     }
 }
