--- a/styles/style.css
+++ b/styles/style.css
@@ -1163,8 +1163,6 @@ body {
     background-color: #FBFCFC;
 }
 
-.subscribe__container {}
-
 .subscribe__title {
     font-size: 45px;
     margin-bottom: 11px;
@@ -1190,8 +1188,6 @@ body {
     box-shadow: 0px 163px 80px 0px rgba(0, 0, 0, 0.04), 0px 105.648px 46.852px 0px rgba(0, 0, 0, 0.03), 0px 62.785px 25.481px 0px rgba(0, 0, 0, 0.02), 0px 32.6px 13px 0px rgba(0, 0, 0, 0.02), 0px 13.281px 6.519px 0px rgba(0, 0, 0, 0.02), 0px 3.019px 3.148px 0px rgba(0, 0, 0, 0.01);
     gap: 20px;
 }
-
-.form-subscribe {}
 
 .form-subscribe__content {
     flex: 1 1 auto;
@@ -1289,15 +1285,9 @@ body {
     padding-bottom: 36px;
 }
 
-.footer__logo {}
-
-.logo {}
-
 .footer__menu {
     flex: 1 1 auto;
 }
-
-.menu-footer {}
 
 .menu-footer__list {
     display: flex;
@@ -1308,14 +1298,27 @@ body {
     justify-content: center;
 }
 
-.menu-footer__item {}
-
 .menu-footer__link {
     color: #31353B;
     font-size: 13px;
     font-weight: 700;
     line-height: 1.3;
+    position: relative;
 }
+.menu-footer__link::after{
+    position: absolute;
+    content: '';
+    left: 0;
+    width: 0;
+    height: 2px;
+    bottom: -5px;
+    background-color: #F85A47;
+    transition: all 0.3s ease 0s;
+}
+.menu-footer__link:hover::after{
+    width: 100%;
+}
+
 
 .footer__copy {
     color: #31353B;
